[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/paddle.gd" type="Script" id=1]
[ext_resource path="res://left_pallete.png" type="Texture" id=2]
[ext_resource path="res://right_pallete.png" type="Texture" id=3]
[ext_resource path="res://scripts/ball.gd" type="Script" id=4]
[ext_resource path="res://ball.png" type="Texture" id=5]
[ext_resource path="res://separator.png" type="Texture" id=6]
[ext_resource path="res://scripts/wall.gd" type="Script" id=7]
[ext_resource path="res://scripts/ceiling_floor.gd" type="Script" id=8]
[ext_resource path="res://scripts/contoll.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 10 )

[sub_resource type="GDScript" id=5]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _button_up():
	pass

func _on_Button_button_up():
	pass # Replace with function body.
"

[node name="Pong" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 500.0
color = Color( 0.141176, 0.152941, 0.164706, 1 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( 67.6285, 192.594 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Left"]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 563.815, 188.919 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Right"]
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="Right"]
shape = SubResource( 1 )

[node name="Ball" type="Area2D" parent="."]
position = Vector2( 320.5, 191.124 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Ball"]
texture = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="Separator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 6 )

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2( -10, 200 )
script = ExtResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 3 )

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 650, 200 )
script = ExtResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 3 )

[node name="Ceiling" type="Area2D" parent="."]
position = Vector2( 320, -10 )
script = ExtResource( 8 )

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource( 4 )

[node name="Floor" type="Area2D" parent="."]
position = Vector2( 320, 410 )
scale = Vector2( 1, 1e-05 )
script = ExtResource( 8 )
_bounce_direction = -1

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 320, 250 )
current = true

[node name="Panel" type="Panel" parent="."]
margin_top = 410.0
margin_right = 640.0
margin_bottom = 500.0
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Panel"]
margin_top = 15.0
margin_right = 120.0
margin_bottom = 35.0
text = "Points of Player A"

[node name="Label2" type="Label" parent="Panel"]
margin_left = 30.0
margin_top = 39.0
margin_right = 70.0
margin_bottom = 59.0
text = "0"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Panel"]
margin_left = 520.0
margin_top = 15.0
margin_right = 640.0
margin_bottom = 35.0
text = "Points of Player B"

[node name="Label4" type="Label" parent="Panel"]
margin_left = 556.0
margin_top = 42.0
margin_right = 596.0
margin_bottom = 62.0
text = "0"
align = 1
valign = 1

[node name="Label5" type="Label" parent="Panel"]
margin_left = 280.0
margin_top = 1.0
margin_right = 360.0
margin_bottom = 41.0
text = "Match!"
align = 1
valign = 1

[node name="Button" type="Button" parent="Panel"]
margin_left = 290.0
margin_top = 45.0
margin_right = 350.0
margin_bottom = 65.0
text = "Restart"
script = SubResource( 5 )

[connection signal="area_entered" from="Left" to="Left" method="_on_area_entered"]
[connection signal="area_entered" from="Right" to="Right" method="_on_area_entered"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="Ceiling" to="Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
[connection signal="button_up" from="Panel/Button" to="Left" method="_on_Button_button_up"]
[connection signal="button_up" from="Panel/Button" to="Right" method="_on_Button_button_up"]
[connection signal="button_up" from="Panel/Button" to="Ball" method="_on_Button_button_up"]
